--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ steps:
     echo 'deb http://deb.debian.org/debian buster-backports main' | sudo tee /etc/apt/sources.list.d/buster-backports.list
     sudo apt-get update
     sudo apt-get -t buster-backports install cmake
+  runAsRoot: true
   displayName: 'Install packages'
 - checkout: SymCrypt
   path: SymCrypt
