Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
     sudo apt-get install cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-8-dev -y
     echo 'deb http://deb.debian.org/debian buster-backports main' | sudo tee /etc/apt/sources.list.d/buster-backports.list
     sudo apt-get update
-    sudo apt-get -t buster-backports install cmake
+    sudo apt-get -t buster-backports install cmake -y
   displayName: 'Install packages'
 - checkout: SymCrypt
   path: SymCrypt
