--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,6 @@ steps:
     sh -c "apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -o Dpkg::Options::="--force-confold" -y install sudo"
   displayName: 'Install Sudo in container'
 - script: |
-    whoami
-    groups
     sudo apt-get update
     sudo apt-get install cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-8-dev -y
     echo 'deb http://deb.debian.org/debian buster-backports main' | sudo tee /etc/apt/sources.list.d/buster-backports.list
@@ -57,6 +55,7 @@ steps:
   workingDirectory: $(Pipeline.Workspace)
   displayName: 'Install OpenSSL'
 - script: |
+    ln -s $(Pipeline.Workspace)/SymCrypt ~/SymCrypt
     sudo pip3 install -r scripts/requirements.txt
     mkdir bin
     cd bin
