Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ steps:
     echo 'deb http://deb.debian.org/debian buster-backports main' | sudo tee /etc/apt/sources.list.d/buster-backports.list
     sudo apt-get update
     sudo apt-get -t buster-backports install cmake -y
+    mkdir -p $(Pipeline.Workspace)/target
   displayName: 'Install packages'
 - checkout: SymCrypt
   path: SymCrypt
