--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-20.04
 
 container:
-  image: debian:buster
+  image: debian:bullseye
   options:  "--name ci-container -v /usr/bin/docker:/tmp/docker:ro"
 
 resources:
@@ -33,11 +33,8 @@ steps:
   displayName: 'Install Sudo in container'
 - script: |
     sudo apt-get update
-    sudo apt-get install cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-8-dev -y
-    # Upgrade cmake to 3.16.3-3~bpo10+1
-    echo 'deb http://deb.debian.org/debian buster-backports main' | sudo tee /etc/apt/sources.list.d/buster-backports.list
-    sudo apt-get update
-    sudo apt-get -t buster-backports install cmake -y
+    sudo apt-get install -y cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-10-dev
+    sudo apt-get install openssl libssl-dev libssl1.1
     mkdir -p $(Pipeline.Workspace)/target
   displayName: 'Install packages'
 - checkout: SymCrypt
@@ -45,22 +42,10 @@ steps:
 - checkout: SymCrypt-OpenSSL
   path: SymCrypt-OpenSSL
 - script: |
-    git clone -b debian/openssl-1.1.1k-1 https://salsa.debian.org/debian/openssl.git openssl
-    cd openssl
-    dpkg-buildpackage -b -rfakeroot -us -uc
-  workingDirectory: $(Pipeline.Workspace)
-  displayName: 'Build OpenSSL'
-- script: |
-    sudo dpkg -i libssl1.1_*.deb
-    sudo dpkg -i libssl-dev_*.deb
-    sudo dpkg -i openssl_*.deb
-  workingDirectory: $(Pipeline.Workspace)
-  displayName: 'Install OpenSSL'
-- script: |
     sudo pip3 install -r scripts/requirements.txt
     mkdir bin
     cd bin
-    cmake .. -DCMAKE_TOOLCHAIN_FILE=../cmake-toolchain/LinuxUserMode-AMD64.cmake -DCMAKE_C_FLAGS="-D_rdseed64_step=__builtin_ia32_rdseed_di_step"
+    cmake .. -DCMAKE_TOOLCHAIN_FILE=../cmake-toolchain/LinuxUserMode-AMD64.cmake
     cmake --build .
   workingDirectory: $(Pipeline.Workspace)/SymCrypt
   displayName: 'Build SymCrypt'
