--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,13 +40,15 @@ steps:
     sudo chown $USER $HOME
     ln -s $(System.DefaultWorkingDirectory)/src/SymCrypt ~/SymCrypt
     cp $(System.DefaultWorkingDirectory)/src/SymCrypt/bin/module/AMD64/LinuxUserMode/libsymcrypt.so ./
-    cmake .
-    make
+    mkdir bin
+    cd bin
+    cmake .. -DCMAKE_TOOLCHAIN_FILE=../cmake-toolchain/LinuxUserMode-AMD64.cmake
+    cmake --build .
   displayName: 'Build SymCrypt-OpenSSL'
 - script: |
     cp $(System.DefaultWorkingDirectory)/src/*.deb ./
     cp $(System.DefaultWorkingDirectory)/src/SymCrypt/bin/module/AMD64/LinuxUserMode/libsymcrypt.so ./
-    cp $(System.DefaultWorkingDirectory)/src/SymCrypt-OpenSSL/SymCryptEngine/dynamic/libsymcryptengine.so ./
+    cp $(System.DefaultWorkingDirectory)/src/SymCrypt-OpenSSL/bin/SymCryptEngine/dynamic/libsymcryptengine.so ./
   workingDirectory: $(Pipeline.Workspace)/target
   displayName: 'Copy packages'
 - publish: $(Pipeline.Workspace)/target
