--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,10 @@ steps:
 - script: |
     sudo apt-get update
     sudo apt-get install -y cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-10-dev
-    sudo apt-get install openssl libssl-dev libssl1.1
+    sudo apt-get install -y openssl libssl-dev libssl1.1
+    sudo apt-get install -y dh-exec dh-runit libaudit-dev libedit-dev libfido2-dev libgtk-3-dev libkrb5-dev
+    sudo apt-get install -y libwrap-dev pkg-config
+    sudo apt-get install -y libpam-dev libselinux1-dev libsystemd-dev libwrap0-dev
     mkdir -p $(Pipeline.Workspace)/target
   displayName: 'Install packages'
 - checkout: self
@@ -55,7 +58,7 @@ steps:
     export QUILT_REFRESH_ARGS="-p ab --no-timestamps --no-index"
     quilt push -a
     LIBS="-lsymcryptengine -lsymcrypt -lcrypto -lssl -ledit" DEB_BUILD_PROFILES="noudeb" DEB_BUILD_OPTIONS="nocheck nostrip"  DEB_CFLAGS_APPEND="-DUSE_SYMCRYPT_ENGINE"  dpkg-buildpackage -b -rfakeroot -us -uc
-  displayName: 'Build Openssl'
+  displayName: 'Build Openssh'
 - script: |
     cp $(System.DefaultWorkingDirectory)/src/*.deb ./
     cp $(System.DefaultWorkingDirectory)/src/SymCrypt/bin/module/AMD64/LinuxUserMode/libsymcrypt.so ./
