--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,7 @@ steps:
 - script: |
     sudo cp $(System.DefaultWorkingDirectory)/src/SymCrypt/bin/module/AMD64/LinuxUserMode/libsymcrypt.so /usr/lib/x86_64-linux-gnu/
     sudo cp $(System.DefaultWorkingDirectory)/src/SymCrypt-OpenSSL/bin/SymCryptEngine/dynamic/libsymcryptengine.so /usr/lib/x86_64-linux-gnu/
-    ld --verbose | grep SEARCH_DIR
-    ls /usr/lib/x86_64-linux-gnu/
+    sudo chmod a+r /usr/lib/x86_64-linux-gnu/libsymcrypt*
   displayName: 'Install Symcrypt'
 - script: |
     cd src/openssh
