--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ steps:
     sh -c "apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -o Dpkg::Options::="--force-confold" -y install sudo"
   displayName: 'Install Sudo in container'
 - script: |
+    sudo mkdir -p $HOME
+    sudo chown $USER $HOME
     sudo apt-get update
     sudo apt-get install -y cmake git make build-essential quilt debhelper bc python3 python3-pip sudo libssl-dev libgcc-10-dev
     sudo apt-get install -y openssl libssl-dev libssl1.1
@@ -30,6 +32,8 @@ steps:
 - checkout: self
   submodules: true
 - script: |
+    sudo mkdir -p $HOME
+    sudo pip3 install -r src/SymCrypt/scripts/requirements.txt
     make all
   displayName: 'Build SymCrypt-OpenSSL'
 - script: |
