--- a/src/SymCrypt-OpenSSL-Debian/Makefile
+++ b/src/SymCrypt-OpenSSL-Debian/Makefile
@@ -5,8 +5,7 @@ SHELL = /bin/bash
 ARCH ?= amd64
 BUILD_NAME = symcrypt-openssl
 BUILD_VERSION = 0.1
-SONIC_BUILD_HOOKS_PACKAGE = $(BUILD_NAME)_$(BUILD_VERSION)_$(ARCH).deb
-
+SYMCRYPT_PACKAGE = $(BUILD_NAME)_$(BUILD_VERSION)_$(ARCH).deb
 BUILD_ROOT_DIR = tmp/$(BUILD_NAME)
 
 # TODO: Support arm64 and armhf
@@ -17,7 +16,7 @@ ROOT_PATH = $(shell realpath $(shell pwd)/../..)
 TARGET_PATH = $(ROOT_PATH)/target
 LIBSYMCRYPT = $(TARGET_PATH)/libsymcrypt.so
 LIBSYMCRYPTENGINE = $(TARGET_PATH)/libsymcryptengine.so
-TARGET = $(TARGET_PATH)/$(SONIC_BUILD_HOOKS_PACKAGE)
+TARGET = $(TARGET_PATH)/$(SYMCRYPT_PACKAGE)
 
 DEPENDS := $(LIBSYMCRYPT) $(LIBSYMCRYPTENGINE)
 
