--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
     sudo apt-get install -y dh-exec dh-runit libaudit-dev libedit-dev libfido2-dev libgtk-3-dev libkrb5-dev
     sudo apt-get install -y libwrap-dev pkg-config
     sudo apt-get install -y libpam-dev libselinux1-dev libsystemd-dev libwrap0-dev
+    sudo pip3 install blurb
     mkdir -p $(Pipeline.Workspace)/target
   displayName: 'Install packages'
 - checkout: self
