--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ jobs:
       sudo apt-get install -y libpam-dev libselinux1-dev libsystemd-dev libwrap0-dev
 
       # Build Golang
-      sudo apt-get install golang
+      sudo apt-get install -y golang
  
       # Build Python
       sudo apt-get install -y lsb-release sharutils libreadline-dev libncursesw5-dev  libbz2-dev liblzma-dev libgdbm-dev libdb-dev tk-dev blt-dev  libexpat1-dev libmpdec-dev libbluetooth-dev locales-all libsqlite3-dev media-types
