--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,4 +56,5 @@ jobs:
     displayName: 'Build'
   - publish: $(System.DefaultWorkingDirectory)/target
     artifact: fips-symcrypt
+    condition: always()
     displayName: "Archive packages"
