--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
 - job:
   displayName: Build
   timeoutInMinutes: 240
-  pool: sonicbld
+  pool: sonic
   container:
     image: debian:bullseye
     options:  "--name ci-container -v /usr/bin/docker:/tmp/docker:ro"
