--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
 - job:
   displayName: Build
   timeoutInMinutes: 240
-  pool: sonic
+  pool: sonicbld
   container:
     image: debian:bullseye
     options:  "--name ci-container -v /usr/bin/docker:/tmp/docker:ro"
@@ -48,7 +48,8 @@ jobs:
       fi
       sudo mkdir -p $HOME
       sudo pip3 install -r src/SymCrypt/scripts/requirements.txt
-      make all
+      make target/symcrypt-openssl_0.1_amd64.deb
+      cp -rf src/SymCrypt/bin/module/AMD64/LinuxUserMode target/ 
       if [ $COPY_TARGET_ROOT == y ]; then
         cp target/* -rf $(System.DefaultWorkingDirectory)/target/
       fi
