Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,7 @@ jobs:
     displayName: 'Install packages'
   - checkout: self
     submodules: recursive
+    clean: true
   - script: |
       set -ex
       if [ -d src/sonic-fips ]; then
